--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -20,6 +20,8 @@ Source0: %{name}-%{version}.tar.gz
 %global postgres_prefix postgresql94
 %endif
 
+%global have_rados 0@HAVE_RADOS@
+
 BuildRequires: %{postgres_prefix}-devel
 BuildRequires: glib2-devel >= 2.28
 BuildRequires: %{python_prefix}-devel
@@ -30,6 +32,9 @@ BuildRequires: libattr-devel
 BuildRequires: sg3_utils-devel
 BuildRequires: protobuf-c-devel
 BuildRequires: systemd
+%if %{have_rados} == 01
+BuildRequires: librados2
+%endif
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
@@ -49,6 +54,9 @@ Requires: %{python_prefix}-psycopg2
 Requires: %{python_prefix}-tabulate
 Requires: protobuf
 Requires: protobuf-c
+%if %{have_rados} == 01
+Requires: ceph
+%endif
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
@@ -70,7 +78,12 @@ object store from a C program.
 %if 0%{?rhel} < 8
 export PKG_CONFIG_PATH=/usr/pgsql-9.4/lib/pkgconfig
 %endif
+
+%if %{have_rados} == 01
+%configure --enable-rados
+%else
 %configure
+%endif
 make %{?_smp_mflags}
 
 
