io: rados open/close
This patch reorganizes the files of the io module and begins the
implementation of the RADOS pool I/O adapter with the open/close
functions, including the addition and deletion of metadata for
RADOS objects

Change-Id: Id8f6ae65001e8b80df08d21da4fc84125f68729b
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10429
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -18,6 +18,7 @@ RAID1_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
 SCSI_LIB=$(TO_SRC)/ldm-modules/libpho_scsi.la
 SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
+IO_LIB=$(TO_SRC)/io/libpho_io.la
 
 if VALGRIND_ENABLED
 @VALGRIND_CHECK_RULES@
@@ -52,8 +53,8 @@ check_SCRIPTS=test_bad_comm.sh \
               test_undelete.sh
 
 if RADOS_ENABLED
-check_PROGRAMS+=test_lib_dev_rados
-check_SCRIPTS+=test_lib_dev_rados.sh
+check_PROGRAMS+=test_lib_dev_rados test_io_rados
+check_SCRIPTS+=test_lib_dev_rados.sh test_io_rados.sh
 endif
 
 TESTS=$(check_SCRIPTS)
@@ -85,6 +86,10 @@ if RADOS_ENABLED
 test_lib_dev_rados_SOURCES=test_lib_dev_rados.c
 test_lib_dev_rados_LDADD=$(ADMIN_LIB) $(LDM_LIB)
 test_lib_dev_rados_CFLAGS=-I$(TO_TEST)
+
+test_io_rados_SOURCES=test_io_rados.c
+test_io_rados_LDADD=$(ADMIN_LIB) $(IO_LIB) $(LDM_LIB)
+test_io_rados_CFLAGS=-I$(TO_TEST)
 endif
 
 test_raid1_split_locate_SOURCES=test_raid1_split_locate.c
