--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -3,3 +3,5 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_ldm.la
 
 libpho_ldm_la_SOURCES=ldm.c
+
+libpho_ldm_la_LIBADD=../module-loader/libpho_module_loader.la
