--- a/configure.ac
+++ b/configure.ac
@@ -127,6 +127,7 @@ AC_CONFIG_FILES([Makefile
          src/communication/Makefile
          src/store/Makefile
          src/layout-modules/Makefile
+         src/ldm-modules/Makefile
          src/admin/Makefile
          src/cli/Makefile
          tests/interns/Makefile
