io: rados write
Change-Id: Ic977776fb81a98afe6e5ebcc843326e23f8e6205
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10503
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -88,7 +88,7 @@ test_lib_dev_rados_LDADD=$(ADMIN_LIB) $(LDM_LIB)
 test_lib_dev_rados_CFLAGS=-I$(TO_TEST)
 
 test_io_rados_SOURCES=test_io_rados.c
-test_io_rados_LDADD=$(ADMIN_LIB) $(IO_LIB) $(LDM_LIB)
+test_io_rados_LDADD=$(ADMIN_LIB) $(IO_LIB) $(LDM_LIB) -lrados
 test_io_rados_CFLAGS=-I$(TO_TEST)
 endif
 
