lib adapter: move scsi adapter to ldm-modules
Also move the scsi files that constitute the
libpho_scsi library.

Change-Id: I04577a97c5d231c38caf0539a9441e550ae18bba
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10518
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/ldm-modules/Makefile.am
+++ b/src/ldm-modules/Makefile.am
@@ -1,7 +1,21 @@
 AM_CFLAGS= $(CC_OPT)
 
-pkglib_LTLIBRARIES=libpho_lib_adapter_dummy.la
+noinst_LTLIBRARIES=libpho_scsi.la
+
+noinst_HEADERS=scsi_common.h scsi_api.h
+
+libpho_scsi_la_SOURCES=scsi_common.c scsi_api.c
+libpho_scsi_la_LIBADD=-lsgutils2
+
+pkglib_LTLIBRARIES=libpho_lib_adapter_dummy.la libpho_lib_adapter_scsi.la
+
 libpho_lib_adapter_dummy_la_SOURCES=ldm_lib_dummy.c
 libpho_lib_adapter_dummy_la_CFLAGS=-fPIC $(AM_CFLAGS)
 libpho_lib_adapter_dummy_la_LIBADD=../common/libpho_common.la
 libpho_lib_adapter_dummy_la_LDFLAGS=-version-info 0:0:0
+
+libpho_lib_adapter_scsi_la_SOURCES=ldm_lib_scsi.c
+libpho_lib_adapter_scsi_la_CFLAGS=-fPIC $(AM_CFLAGS)
+libpho_lib_adapter_scsi_la_LIBADD=../common/libpho_common.la \
+                                  ../cfg/libpho_cfg.la libpho_scsi.la
+libpho_lib_adapter_scsi_la_LDFLAGS=-version-info 0:0:0
