--- a/tests/externs/api/Makefile.am
+++ b/tests/externs/api/Makefile.am
@@ -14,6 +14,7 @@ DSS_LIB=$(TO_SRC)/dss/libpho_dss.la
 LAYOUT_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
 LDM_LIB=$(TO_SRC)/ldm/libpho_ldm.la
 RAID1_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
+SCSI_LIB=$(TO_SRC)/ldm-modules/libpho_scsi.la
 SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 
@@ -79,7 +80,7 @@ test_raid1_split_locate_LDADD=$(CFG_LIB) $(COMMON_LIB) $(DSS_LIB) $(RAID1_LIB)
 test_raid1_split_locate_CFLAGS=-I$(TO_TEST)
 
 test_scsi_SOURCES=test_scsi.c
-test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
+test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB) $(SCSI_LIB)
 test_scsi_CFLAGS=-I$(TO_TEST)
 
 test_store_SOURCES=test_store.c
