--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS= $(CC_OPT)
 
-SUBDIRS=proto include common ldm-modules communication ldm dss cfg io layout \
+SUBDIRS=proto include common communication ldm dss cfg ldm-modules io layout \
         serializer store admin lrs layout-modules cli
