ldm: RADOS File System Adapter
Change-Id: I69fefe20dffff320f6dfb31148d7f95bedcd3dec
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10531
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/ldm-modules/Makefile.am
+++ b/src/ldm-modules/Makefile.am
@@ -44,6 +44,14 @@ libpho_fs_adapter_ltfs_la_LIBADD=../common/libpho_common.la \
 libpho_fs_adapter_ltfs_la_LDFLAGS=-version-info 0:0:0
 
 if RADOS_ENABLED
+pkglib_LTLIBRARIES+=libpho_fs_adapter_rados.la
+libpho_fs_adapter_rados_la_SOURCES=ldm_fs_rados.c
+libpho_fs_adapter_rados_la_CFLAGS=-fPIC $(AM_CFLAGS)
+libpho_fs_adapter_rados_la_LIBADD=../common/libpho_common.la \
+                                  ../cfg/libpho_cfg.la -lrados \
+                                  ../ldm/libpho_ldm.la
+libpho_fs_adapter_rados_la_LDFLAGS=-version-info 0:0:0
+
 pkglib_LTLIBRARIES+=libpho_dev_adapter_rados_pool.la
 
 libpho_dev_adapter_rados_pool_la_SOURCES=ldm_dev_rados_pool.c
