lrs, cli: RADOS resources handling
This patch adds the necessary changes for the LRS to handle properly
RADOS LDM and I/O Adapters.

Change-Id: Ie16aca7d0eedbf58db781759a5615a7c953a6b4e
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10591
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -58,6 +58,10 @@ check_SCRIPTS=acceptance.sh \
               test_resource_management.sh \
               test_undelete.sh
 
+if RADOS_ENABLED
+check_SCRIPTS+=test_store_rados_commands.sh
+endif
+
 TESTS=$(check_SCRIPTS)
 
 put_then_release_SOURCES=put_then_release.c
