tests: test sync to stopped a device and replace controlled_store.c
In addition of testing ld_ongoing_io, we also test if a device
thread has waiting sync before declarating it "stopped".

"controlled_store.c" was launched in background to send a rwalloc
and receive the answer before waiting a signal to send the release
and receiving the release answer. But, the tests had no garantee
than after executing controlled_store in background the rwalloc
was ending before continuing test.

We replace it by a binary executed in two steps. The end of
execution of the first step garantees that the rwalloc is ended
and that we know wait for the release.

Change-Id: Ife6c8d772d63e8302ef55417c54ad3e2ce2c1edf
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10543
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -34,7 +34,7 @@ endif
 
 TEST_EXTENSIONS=.sh
 
-check_PROGRAMS=controlled_store \
+check_PROGRAMS=put_then_release \
                medium_locker
 
 check_SCRIPTS=acceptance.sh \
@@ -60,10 +60,10 @@ check_SCRIPTS=acceptance.sh \
 
 TESTS=$(check_SCRIPTS)
 
-controlled_store_SOURCES=controlled_store.c
-controlled_store_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB) \
+put_then_release_SOURCES=put_then_release.c
+put_then_release_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB) \
                           $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
-controlled_store_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
+put_then_release_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 
 medium_locker_SOURCES=medium_locker.c
 medium_locker_LDADD=$(DSS_LIB) $(STORE_LIB)
