module-loader: load new modules dynamically
Remove the doubled code in ldm and layout for loading
new modules, and add it to a separate folder.

Change-Id: I6963d57e2d3306f6efbc16b472ec039ff1480fdf
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10579
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,7 @@ AC_CONFIG_FILES([Makefile
          src/proto/Makefile
          src/include/Makefile
          src/common/Makefile
+         src/module-loader/Makefile
          src/ldm/Makefile
          src/dss/Makefile
          src/cfg/Makefile
