dev adapter: move rados adapter to ldm-modules
Change-Id: I30d48c2ab848e8c77008b0b5957c99de215d1838
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10584
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/ldm-modules/Makefile.am
+++ b/src/ldm-modules/Makefile.am
@@ -30,3 +30,13 @@ libpho_dev_adapter_scsi_tape_la_SOURCES=ldm_dev_scsi_tape.c
 libpho_dev_adapter_scsi_tape_la_CFLAGS=-fPIC $(AM_CFLAGS)
 libpho_dev_adapter_scsi_tape_la_LIBADD=../common/libpho_common.la
 libpho_dev_adapter_scsi_tape_la_LDFLAGS=-version-info 0:0:0
+
+if RADOS_ENABLED
+pkglib_LTLIBRARIES+=libpho_dev_adapter_rados_pool.la
+
+libpho_dev_adapter_rados_pool_la_SOURCES=ldm_dev_rados_pool.c
+libpho_dev_adapter_rados_pool_la_CFLAGS=-fPIC $(AM_CFLAGS)
+libpho_dev_adapter_rados_pool_la_LIBADD=../common/libpho_common.la \
+                                        ../cfg/libpho_cfg.la -lrados
+libpho_dev_adapter_rados_pool_la_LDFLAGS=-version-info 0:0:0
+endif
