--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -2,12 +2,7 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_ldm.la
 
-noinst_HEADERS=ldm_common.h ldm_dev_adapters.h
+noinst_HEADERS=ldm_common.h
 
 libpho_ldm_la_SOURCES=ldm.c ldm_common.c ldm_fs_posix.c ldm_fs_ltfs.c
 libpho_ldm_la_LIBADD=../module-loader/libpho_module_loader.la
-
-if RADOS_ENABLED
-libpho_ldm_la_SOURCES+=ldm_dev_rados_pool.c
-libpho_ldm_la_LIBADD+=-lrados
-endif
