cli: "rados_pool locate" command for Ceph\RADOS pools
Change-Id: I93e706e389bee3db4465e915124dc17c0f441cad
Signed-off-by: Aymeric KEYEWA <keyewaa@ocre.cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10587
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -59,7 +59,7 @@ check_SCRIPTS=acceptance.sh \
               test_undelete.sh
 
 if RADOS_ENABLED
-check_SCRIPTS+=test_store_rados_commands.sh
+check_SCRIPTS+=test_store_rados_commands.sh test_locate_rados.sh
 endif
 
 TESTS=$(check_SCRIPTS)
