fs adapter: move all fs adapters to ldm-modules
Change-Id: Id65e563333cebfb6db2decb815dc6da51690dabf
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10588
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -2,7 +2,5 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_ldm.la
 
-noinst_HEADERS=ldm_common.h
-
-libpho_ldm_la_SOURCES=ldm.c ldm_common.c ldm_fs_posix.c ldm_fs_ltfs.c
+libpho_ldm_la_SOURCES=ldm.c
 libpho_ldm_la_LIBADD=../module-loader/libpho_module_loader.la
