io adapters: modularize io adapters
Also modify how the libraries are handled for modules.

Change-Id: Icf3c5f14a8dd4a64643d5aa5f7253b69c9644444
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10590
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication module-loader ldm dss cfg \
-        ldm-modules io layout serializer store admin lrs layout-modules cli
+        ldm-modules io io-modules layout serializer store admin lrs \
+        layout-modules cli
