--- a/src/io/Makefile.am
+++ b/src/io/Makefile.am
@@ -2,5 +2,4 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_io.la
 
-libpho_io_la_SOURCES=io.c mapper.c
-libpho_io_la_LIBADD=-lcrypto
+libpho_io_la_SOURCES=io.c
