--- a/tests/prod/Makefile.am
+++ b/tests/prod/Makefile.am
@@ -5,4 +5,8 @@ TESTS_ENVIRONMENT=export EXEC_NONREGRESSION;
 
 check_SCRIPTS=acceptance.sh
 
+if RADOS_ENABLED
+check_SCRIPTS+=test_rados_rpms.sh
+endif
+
 TESTS=$(check_SCRIPTS)
