io_sched: basic implementation of FIFO algorithm
The main parts of the algorithm fifo_get_device and
fifo_handle_request_failure will be implemented in later patches.

Also, add subdir-objects in AM_INIT_AUTOMAKE to allow building source
files that are in a subdirectory without creating a new Makefile.am.

Change-Id: Iac53a0b6e7709d06d781dc9fc884f1c5d0a0d499
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10649
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -9,12 +9,16 @@ unit_files=phobosd.service
 unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
+IO_SCHEDULERS=io_schedulers/fifo.c \
+              io_schedulers/schedulers.h
+
 phobosd_SOURCES=lrs.c \
                 lrs_cfg.h lrs_cfg.c \
                 lrs_sched.h lrs_sched.c \
                 lrs_device.h lrs_device.c \
                 lrs_thread.h lrs_thread.c \
-                io_sched.h io_sched.c
+                io_sched.h io_sched.c \
+                $(IO_SCHEDULERS)
 phobosd_CFLAGS=$(AM_CFLAGS)
 phobosd_LDADD=../dss/libpho_dss.la \
               ../cfg/libpho_cfg.la \
