lrs: refactor search_{in_use,loaded}_media to not use the lrs_sched structure
Also, introduce the structure lock_handle which contains the data required
to take a lock.

Change-Id: I72bf1c8f256ef87c3730eb6dc1fa68a26729cfc6
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10652
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -14,11 +14,13 @@ IO_SCHEDULERS=io_schedulers/fifo.c \
 
 phobosd_SOURCES=lrs.c \
                 lrs_cfg.h lrs_cfg.c \
-                lrs_sched.h lrs_sched.c \
                 lrs_device.h lrs_device.c \
+                lrs_sched.h lrs_sched.c \
                 lrs_thread.h lrs_thread.c \
+                lrs_utils.h lrs_utils.c \
                 io_sched.h io_sched.c \
                 $(IO_SCHEDULERS)
+
 phobosd_CFLAGS=$(AM_CFLAGS)
 phobosd_LDADD=../dss/libpho_dss.la \
               ../cfg/libpho_cfg.la \
@@ -31,4 +33,4 @@ phobosd_LDADD=../dss/libpho_dss.la \
 phobosd_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 libpho_lrs_la_SOURCES=lrs_cfg.c lrs_sched.c lrs_device.c lrs_thread.c \
-                      io_sched.c $(IO_SCHEDULERS)
+                      io_sched.c lrs_utils.c $(IO_SCHEDULERS)
