io_sched: implementation of fifo_next_request
This algorithm is used to decide which I/O scheduler should be used
next. It will return the oldest request.

Change-Id: Ie2bd69a09ee3706a4e423733915667b02d69f005
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10657
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -11,7 +11,8 @@ EXTRA_DIST=$(unit_files)
 
 IO_SCHEDULERS=io_schedulers/fifo.c \
               io_schedulers/device_dispatch_algorithms.c \
-              io_schedulers/schedulers.h
+              io_schedulers/schedulers.h \
+              io_schedulers/scheduler_priority_algorithms.c
 
 phobosd_SOURCES=lrs.c \
                 lrs_cfg.h lrs_cfg.c \
