--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -10,6 +10,7 @@ unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
 IO_SCHEDULERS=io_schedulers/fifo.c \
+              io_schedulers/device_dispatch_algorithms.c \
               io_schedulers/schedulers.h
 
 phobosd_SOURCES=lrs.c \
