io_sched: add a new I/O scheduler for Read
This scheduler will sort read requests per medium.

Change-Id: I5f6bb8c759b49e7624379a5a70fd816b45e4ed5f
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10662
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -10,6 +10,7 @@ unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
 IO_SCHEDULERS=io_schedulers/fifo.c \
+              io_schedulers/grouped_read.c \
               io_schedulers/device_dispatch_algorithms.c \
               io_schedulers/schedulers.h \
               io_schedulers/scheduler_priority_algorithms.c
